[gd_scene load_steps=6 format=3 uid="uid://cv0h6muaidxnr"]

[ext_resource type="Script" uid="uid://b0xdkjkhlrof6" path="res://Scripts/character_picker.gd" id="1_n32q4"]
[ext_resource type="Texture2D" uid="uid://bjd1cjqshnk82" path="res://Assets/UI/CharacterSelector.png" id="2_r1xmk"]
[ext_resource type="Script" uid="uid://d28y6igxnfup8" path="res://Scripts/character_selector_button.gd" id="4_n32q4"]
[ext_resource type="Texture2D" uid="uid://br7uups7ou8m" path="res://Assets/Characters/Baki/BakiMugShot.png" id="4_r1xmk"]
[ext_resource type="PackedScene" uid="uid://cfh10tllkcijw" path="res://Scenes/Fighters/baki.tscn" id="5_o1e5v"]

[node name="CharacterPicker" type="Control" node_paths=PackedStringArray("first_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n32q4")
first_button = NodePath("Fighters/MugShots/BakiButton")

[node name="Fighters" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -100.0
offset_right = 114.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2

[node name="FighterLabel" type="Label" parent="Fighters"]
layout_mode = 2
text = "Fighters"
horizontal_alignment = 1

[node name="MugShots" type="HBoxContainer" parent="Fighters"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BakiButton" type="TextureButton" parent="Fighters/MugShots"]
layout_mode = 2
texture_normal = ExtResource("4_r1xmk")
texture_focused = ExtResource("2_r1xmk")
script = ExtResource("4_n32q4")
character = ExtResource("5_o1e5v")
metadata/_custom_type_script = "uid://d28y6igxnfup8"

[node name="BakiButton2" type="TextureButton" parent="Fighters/MugShots"]
layout_mode = 2
texture_normal = ExtResource("4_r1xmk")
texture_focused = ExtResource("2_r1xmk")
script = ExtResource("4_n32q4")
character = ExtResource("5_o1e5v")
metadata/_custom_type_script = "uid://d28y6igxnfup8"

[node name="BakiButton3" type="TextureButton" parent="Fighters/MugShots"]
layout_mode = 2
texture_normal = ExtResource("4_r1xmk")
script = ExtResource("4_n32q4")
character = ExtResource("5_o1e5v")
metadata/_custom_type_script = "uid://d28y6igxnfup8"

[node name="BakiButton4" type="TextureButton" parent="Fighters/MugShots"]
layout_mode = 2
texture_normal = ExtResource("4_r1xmk")
texture_focused = ExtResource("2_r1xmk")
script = ExtResource("4_n32q4")
character = ExtResource("5_o1e5v")
metadata/_custom_type_script = "uid://d28y6igxnfup8"

[node name="BakiButton5" type="TextureButton" parent="Fighters/MugShots"]
layout_mode = 2
texture_normal = ExtResource("4_r1xmk")
texture_focused = ExtResource("2_r1xmk")
script = ExtResource("4_n32q4")
character = ExtResource("5_o1e5v")
metadata/_custom_type_script = "uid://d28y6igxnfup8"

[node name="BakiButton6" type="TextureButton" parent="Fighters/MugShots"]
layout_mode = 2
texture_normal = ExtResource("4_r1xmk")
script = ExtResource("4_n32q4")
character = ExtResource("5_o1e5v")
metadata/_custom_type_script = "uid://d28y6igxnfup8"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 94.0
offset_right = 255.0
offset_bottom = 125.0
text = "Ready"

[node name="P1Outline" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(57, 54)
texture = ExtResource("2_r1xmk")

[node name="P2Outline" type="Sprite2D" parent="."]
position = Vector2(19, 54)
texture = ExtResource("2_r1xmk")

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
